Fix jumping

--- a/assets/variant-list.css
+++ b/assets/variant-list.css
@@ -468,6 +468,11 @@ variant-list-remove-button {
   display: flex;
 }
 
+.ariant-list-total__info,
+.variant-list-total__confirmation {
+  min-height: 10rem;
+}
+
 .variant-list-total {
   padding-top: 2rem;
   border-top: 0.1rem solid rgba(var(--color-foreground), .08);
